--- a/ref.bib
+++ b/ref.bib
@@ -72,6 +72,20 @@
     year = 1996,
 }
 
+@inproceedings{carousel,
+ author = {Saeed, Ahmed and Dukkipati, Nandita and Valancius, Vytautas and The Lam, Vinh and Contavalli, Carlo and Vahdat, Amin},
+ title = {{Carousel: Scalable Traffic Shaping at End Hosts}},
+ booktitle = {SIGCOMM},
+ year = {2017},
+} 
+
+@inproceedings {eifel,
+author = {Ahmed Saeed and Yimeng Zhao and Nandita Dukkipati and Ellen Zegura and Mostafa Ammar and Khaled Harras and Amin Vahdat},
+title = {{Eiffel: Efficient and Flexible Software Packet Scheduling}},
+booktitle = {NSDI},
+year = {2019},
+}
+
 @inproceedings{binomial,
     author = "Bansal, D. and Balakrishnan, H.",
     title = {{Binomial Congestion Control Algorithms}},
@@ -349,6 +363,13 @@
     year={2004},
 }
 
+@misc{fnv-hash,
+    title={{The FNV Non-Cryptographic Hash Algorithm}},
+    author={Glenn Fowler and Landon Curt Noll and Kiem-Phong Vo and Donald Eastlake and Tony Hansen},
+    year={2018},
+    howpublished={\url{https://tools.ietf.org/html/draft-eastlake-fnv-16}},
+}
+
 @misc{jacobson-memo,
 author = {{Van Jacobson}},
 title = {{30 instruction TCP receive}},
@@ -602,6 +623,13 @@ volume = {63},
 year={1984},
 }
 
+@misc{ipid,
+    title={{Updated Specification of the IPv4 ID Field}},
+    author={Touch, J.},
+    note={RFC 6864, IETF},
+    year={2013},
+}
+
 @misc{netlink,
     title={{Linux Netlink as an IP Services Protocol}},
     author={Salim, J and Khosravi, H. and Kleen, A. and Kuznetsov, A.},
@@ -709,10 +737,6 @@ year = {2013},
     howpublished={\url{http://asperasoft.com/technology/}},
 }
 
-@misc{sfqCoDel,
-    title="{sfqCoDel}",
-    howpublished={\url{http://www.pollere.net/Txtdocs/sfqcodel.cc}},
-}
 @misc{wroclawski,
     title={{TCP ex Machina}},
     author={Wroclawski, John},
