--- a/intro.tex
+++ b/intro.tex
@@ -4,9 +4,10 @@
 \radhika{Alternate intro: mostly just changed the flow of certain points, removed some that might be better suited in related work, and made some more concrete/specific. /*}
 
 %lots of scheduling algorithms proposed. scheduling used in private wans. seems clearly beneficial.
-The vast literature on scheduling and queue management algorithms~\cite{diffserv, fair-queueing, sfq, pie, CoDel, sfqCoDel, fifoplus, virtualClocks, csfq, drr, red, ecn} clearly indicates the performance benefits of deploying such schemes within the network. However, the public Internet has proven difficult to evolve accordingly; although router vendors have, over the years, implemented certain schemes (such as fair queueing~\cite{fair-queueing}\radhika{might be better to cite deficit round robin. need to double check}), they are often not enabled by the network operators. 
+The vast literature on scheduling and queue management algorithms~\cite{diffserv, fair-queueing, sfq, pie, CoDel, fifoplus, virtualClocks, csfq, drr, red, ecn} clearly indicates the performance benefits of deploying such schemes within the network. However, the public Internet has proven difficult to evolve accordingly; although router vendors have, over the years, implemented certain schemes (such as fair queueing~\cite{fair-queueing}\radhika{might be better to cite deficit round robin. need to double check}), they are often not enabled by the network operators. 
 %Meanwhile, in privately operated wide-area networks, operators have used simple scheduling policies in the core to reap significant gains~\cite{b4, bwe, swan}. 
-This reluctance has stemmed from valid concerns. First, such policies can be difficult to configure, and poor configurations can cause significant performance degradation~\cite{nanog-discussion}. Second, the position of operators in the public Internet is a challenging one, as each of their customers may desire diverging (and often incompatible) features. For example, while enabling fair queueing in the routers would benefit short interactive flows competing with bulk transfers, it may penalize flows bundled within a single VPN tunnel by allocating them smaller than their fair share of bandwidth \radhika{this issue might arise with our bundler too...}.
+This reluctance has stemmed from valid concerns. First, such policies can be difficult to configure, and poor configurations can cause significant performance degradation~\cite{nanog-discussion}. Second, the position of operators in the public Internet is a challenging one, as each of their customers may desire diverging (and often incompatible) features. For example, while enabling fair queueing in the routers would benefit short interactive flows competing with bulk transfers, it may penalize flows bundled within a single VPN tunnel by allocating them smaller than their fair share of bandwidth.
+%\radhika{similar issue arises with our bundler too...}.
 Thus, due to limited visibility into their customers' traffic, network operators cannot choose policies that can appease them all. 
 
 On the other hand, an individual customer can effectively choose a scheduling policy for the \emph{component flows} within its own traffic as per its own requirements. 
@@ -14,9 +15,32 @@ On the other hand, an individual customer can effectively choose a scheduling po
 Examples include traffic over the public Internet between different datacenters, between campuses of an organization, collaborating universities or companies, between large content provider (\eg Netflix) and a network with many clients (e.g., a regional ISP), large-scale data backups from an organization to an external site (\eg Dropbox), and so on. 
 In each of these scenarios the sender has enough information to unilaterally choose a scheduling policy for its component flows. However, such policies are effective only when enforced on congested bottleneck links in a flow's path, which are often outside the control of these individual customers~\cite{inferring-interdomain-congestion}. 
 
-So while network operators do not have enough visibility into the traffic to choose the appropriate policy, the customers do not have enough control over the bottleneck links to enforce their desired policies. This paper attempts to resolve this conundrum by \emph{moving the bottleneck to the customer's edge}, such that appropriate scheduling and queue management policies can effectively enforced.
+So while network operators do not have enough visibility into the traffic to choose the appropriate policy, the customers do not have enough control over the bottleneck links to enforce their desired policies. This paper attempts to resolve this conundrum by simply \emph{moving the bottleneck to the customer's edge}, such that appropriate scheduling and queue management policies can be effectively enforced.
 
-\radhika{lock: to be continued....}
+The natural question that arises is, how can the bottleneck be moved? We observe that the component flows of the traffic from a given sender's domain and destined for the same downstream domain, as in the examples mentioned earlier, would share common bottleneck within the network. Aggregating these component flows at the sender's egress, and controlling the outgoing rate of this aggregate to match its share at the bottleneck link, would \emph{move} the queues from the bottleneck in the network to the sender's egress itself, thus effectively shifting the bottleneck. 
+
+We further note that middleboxes are now prevalent in the Internet architecture~\cite{aplomb}. They are often deployed at the egress and ingress of an enterprise network or a domain, to ensure traffic transits them for intrusion detection, packet inspection, filtering etc. They therefore provide an effective vantage point for manipulating flows. 
+
+We therefore propose a new type of middlebox, called a \name, that (i) performs traffic aggregation and rate control at the egress of a customer's edge to shift the bottleneck to itself, and (ii) does effective scheduling and queue management to meet the customer's requirements (such as adhering to a desired delay target, prioritizing flows based on their size, application type, or deadline, enforcing fair queuing for a more stable rate allocation and so on).
+
+% We make the following key contributions:
+% \begin{enumerate}
+%     \item The design and implementation of a \name, including a novel method of collecting congestion control information and enforcing the decisions of a rate control algorithm on traffic aggregates, which \emph{moves} the queues from the bottleneck in the network to the customer's edge.
+%     \item An evaluation of the benefits of scheduling and queue management for traffic aggregates, compared to both the status quo (FIFO) and an idealized deployment where bottleneck queues deploy the desired policy.
+% \end{enumerate}
+
+The rest of the paper dives into the details of how we design, implement and evaluate \name, and is organized as follows:
+\S\ref{s:related} discusses related work.
+\S\ref{s:design} describes the \name architecture and the various trade-offs we considered when designing it.  
+\S\ref{s:measurement} describes our novel approach for gathering measurements from the network to do rate control at the \name in order to move the bottleneck. 
+\S\ref{s:impl} describes our prototype implementation. 
+\S\ref{s:eval} evaluates the performance benefits of using a \name for scheduling and queue management.
+\radhika{re-write this to highlight strong points after the rest of the paper has been written}
+
+
+%Middleboxes offer a flexible design point, since implementations spanning hardware and software represent numerous options in implementing scalable, yet flexible and sophisticated scheduling policies. 
+
+
 
 
 
@@ -35,7 +59,7 @@ So while network operators do not have enough visibility into the traffic to cho
 
 
 
-
+\cut{
 \radhika{*/ Old intro:}
 
 
@@ -79,7 +103,7 @@ This approach, which we call {\em aggregate traffic control}, therefore has two 
 
 How should we implement and deploy our approach? 
 We note that middleboxes are now prevalent in the Internet architecture~\cite{aplomb}.
-The rise of middleboxes allows a new vantage point into flows, since middleboxes are often deployed at natural ``choke points'' in a network to ensure traffic transits them for \eg traffic analysis or intrusion detection.
+The rise of middleboxes allows a new vantage point into flows, since middleboxes are often deployed at natural ``choke points'' \radhika{choke point by definition means a bottleneck -- any other word we can use instead?} in a network to ensure traffic transits them for \eg traffic analysis or intrusion detection.
 Middleboxes offer a flexible design point, since implementations spanning hardware and software represent numerous options in implementing scalable, yet flexible and sophisticated scheduling policies.
 We therefore propose a new type of middlebox to perform traffic aggregation, which we call a \name.
 
@@ -95,6 +119,7 @@ The rest of this paper is organized as follows:
 \S\ref{s:impl} describes our prototype implementation. 
 \S\ref{s:eval} shows an evaluation of the benefits of \name.
 
+}
 \cut{
 \begin{outline}
 \1 Previously, this approach has required terminating the TCP connection at the middlebox; \ie implementing a TCP proxy.
@@ -105,5 +130,4 @@ The rest of this paper is organized as follows:
         \3 end-to-end principle
 \end{outline}
 }
-
 
