--- a/robust.tex
+++ b/robust.tex
@@ -28,7 +28,9 @@ Therefore, for algorithms which observe loss (Nimbus and Copa), we configure the
 
 In this experiment, Copa, primarily a delay-based algorithm, cannot adequately detect the presence of competing elastic traffic and ``mode-switch'' to its competitive mode. When we modify Copa to use Nimbus's elasticity detector (Figure~\ref{fig:robust:cr-elastic:b}), its performance matches the baseline.
 
-\paragrapha{Elastic Flows within competing Bundles} \an{show that if elastic traffic is inside bundles, all bundles can benefit}
+\input{twobundler}
+\paragrapha{Competing Bundles} \name's improvements return once competing traffic starts using \name as well. In Figure~\ref{fig:robust:twobundler}, we show the performance of each of two bundles of traffic competing in the same bottleneck link. 
+Despite both bundles containing persistently backlogged flows, just as in Figure~\ref{fig:robust:cr-elastic}, here \name improves the FCTs of both bundles independently.
 
 \subsection{Path Characteristics}\label{s:robust:path}
 \an{should these go in ``microbenchmarks'' in \S\ref{s:measurement}?}
