--- a/graphs/varying-offered-load.Rnw
+++ b/graphs/varying-offered-load.Rnw
@@ -1,6 +1,6 @@
 \begin{figure}
     \centering
-    <<eval:offeredload,echo=FALSE,warning=FALSE,fig.width='\\columnwidth',fig.height=2>>=
+    <<eval:offeredload,cache=TRUE,echo=FALSE,warning=FALSE,fig.width='\\columnwidth',fig.height=2>>=
 library(ggplot2)
 df <- read.csv("pl-flows.data", sep=" ")
 df$Duration <- df$Duration.usec. / 1e6
