--- a/graphs/with-proxy.Rnw
+++ b/graphs/with-proxy.Rnw
@@ -1,6 +1,6 @@
 \begin{figure}
     \centering
-    <<eval:proxy,echo=FALSE,warning=FALSE,fig.width='\\columnwidth',fig.height=2>>=
+    <<eval:proxy,cache=TRUE,echo=FALSE,warning=FALSE,fig.width='\\columnwidth',fig.height=2>>=
 library(ggplot2)
 df <- read.csv("with-proxy.data", sep=" ")
 df$Duration <- df$Duration.usec. / 1e6
